syntax = "proto3";

option go_package = "./rpc";

package rpc;

service InvSrv { rpc ReqInv(InvReq) returns (InvRet); }

enum InvType {
  BlkInv = 0;
  TxInv = 1;
}

message InvReq {}

message InvRet { repeated Inv invs = 1; }

message Inv {
  InvType type = 1;
  bytes hash = 2;
}
